; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_ps2mouse.c_movement_update.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_ps2mouse.c_movement_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ps2mouse_softc = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ps2mouse_softc*, i32, i32)* @movement_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @movement_update(%struct.ps2mouse_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ps2mouse_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ps2mouse_softc* %0, %struct.ps2mouse_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %4, align 8
  %9 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = sub nsw i32 %7, %10
  %12 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %4, align 8
  %13 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 %14, %11
  store i32 %15, i32* %13, align 4
  %16 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %4, align 8
  %17 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %6, align 4
  %20 = sub nsw i32 %18, %19
  %21 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %4, align 8
  %22 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = add nsw i32 %23, %20
  store i32 %24, i32* %22, align 4
  %25 = load i32, i32* %5, align 4
  %26 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %4, align 8
  %27 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 4
  %28 = load i32, i32* %6, align 4
  %29 = load %struct.ps2mouse_softc*, %struct.ps2mouse_softc** %4, align 8
  %30 = getelementptr inbounds %struct.ps2mouse_softc, %struct.ps2mouse_softc* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
